
=======================================================
            WanT code:  Log of Changes 
=======================================================


25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. (AF)

16 Dec 2008      Important changes in the transport code: reorganization of
                 data storage aimed to include correlation sgm's more easily. (AF)

05 Dec 2008      Bug fixed in current.f90 (call to input_from_file), courtesy of
                 Miroslava Dieskova. QExml lib debugged ad upgraded. Quality
                 of test03 improved. Documentation updated according to bugs
                 reported by Caterina Cocchi et al. (AF)

21 Nov 2008      Bug in the disentanglement restart procedure fixed. 
                 Parallelism improved using MPI_allgatherv in disentangle. (AF)

20 Nov 2008      Bug fixed in util.f90. (AF)

19 Nov 2008      Most of the matrices in workspace_wan.f90 are now allocated
                 in packed form to optimize memory usage. Util.f90 routines
                 updated accordingly. (AF)

18 Nov 2008      Further improvements in parallelism. Menagement of memory in
                 subspace module improved. (AF)

14 Nov 2008      Timing of parallel routines improved. (AF)

07 Nov 2008      Timing module updated to average over pools for well-defined
                 clocks. Overlap_module updated to allow restart with a
                 different number of bands in overlap_read. (AF)

06 Nov 2008      Overlaps and projections are written on a single file also
                 in parallel runs. Bug fixed in restarting (eamp alloc). (AF)

05 Nov 2008      Calls to mp_sum bufferized over kpts. Bug fixed in parallel
                 restarting (subspace_init). (AF)

25 Oct 2008      Inclusion of correlation in transport updated. Test08
                 modified to check correlation effects and shifts in
                 transport. (AF)
