@@ -4,7 +4,8 @@
 =======================================================
 
 
-25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. (AF)
+25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. 
+                 iwin_min, iwin_max, ifroz_min, ifroz_max variables added. (AF)
 
 16 Dec 2008      Important changes in the transport code: reorganization of
                  data storage aimed to include correlation sgm's more easily. (AF)
